SUBDIRS = source

lib_LTLIBRARIES=libcm_tr181.la
libcm_tr181_la_LDFLAGS=
libcm_tr181_la_SOURCES=
libcm_tr181_la_DEPENDENCIES= \
	source/TR-181/middle_layer_src/libCcspCMAgent_middle_layer_src.la \
	source/TR-181/integration_src.shared/libCcspCMAgent_integration_src_shared.la

libcm_tr181_la_LIBADD=$(libcm_tr181_la_DEPENDENCIES)
